--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,21 @@
-Flask
-Requests
-Cryptography
-aiohttp
+asn1crypto==0.24.0
+async-timeout==3.0.1
+attrs==18.2.0
+certifi==2018.11.29
+cffi==1.11.5
+chardet==3.0.4
+Click==7.0
+cryptography==2.5
+Flask==1.0.2
+idna==2.8
+itsdangerous==1.1.0
+Jinja2==2.10
+MarkupSafe==1.1.0
+multidict==4.5.2
+pkg-resources==0.0.0
+pycparser==2.19
+requests==2.21.0
+six==1.12.0
+urllib3==1.24.1
+Werkzeug==0.14.1
+yarl==1.3.0
